# MyDudes

./: .gitignore  README.md
backend/: .env  Dockerfile  docker-compose.yml  pyproject.toml  routers.py
backend/base/: classes.py  permissions.py  serializers.py
backend/config/: settings.py  urls.py  yasg.py
backend/followers/: admin.py  models.py  serializers.py  views.py
backend/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
backend/wall/: admin.py  models.py  serializers.py  views.py
backend/web/: forms.py  serializers.py  urls.py  views.py
backend/web/templates/registration/: login.html  register.html
backend/web/templates/web/: profile.html
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/context/: AuthContext.js
frontend/src/views/: Dashboard.js  Homepage.js  Loginpage.js  Navbar.js  Registerpage.js
