[tool.poetry]
name = "mydudes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
djangorestframework = "^3.14.0"
pillow = "^10.0.0"
psycopg2-binary = "^2.9.6"
drf-yasg = "^1.21.7"
django-filter = "^23.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
